--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </a>
             <nav>
                 <i class="fas fa-bars toggle-menue"></i>
-                <ul>
+                <ul class="clopssing">
                     <li class="active">
                         <a href="#home">home</a>
                     </li>
@@ -530,6 +530,8 @@
         </div>
     </footer>
     <!-- end footer section -->
+    <!-- start sctipt -->
+    <script src="js/main.js"></script>
 
 </body>
 
